[workspace]
resolver = "2"
members = [ 
    "imguizmo-rs",
    "riri-inspector-components"
]

[workspace.package]
version = "0.1.0"
authors = [ "Rirurin" ]
categories = [ "games" ]
homepage = "https://riri.wtf"
repository = "https://github.com/rirurin/riri-imgui-components"
license-file = "LICENSE"
edition = "2024"
